--- a/package.json
+++ b/package.json
@@ -119,5 +119,6 @@
     "sharp": "^0.32.6",
     "rollup": "2.79.2",
     "body-parser": "1.20.3"
-  }
+  },
+  "proxy": "https://rsv-uat.corelabinabox.com"
 }
