--- a/platform/app/pluginConfig.json
+++ b/platform/app/pluginConfig.json
@@ -61,6 +61,10 @@
       "packageName": "@ohif/extension-cornerstone-dicom-rt",
       "default": false,
       "version": "3.0.0"
+    },
+    {
+      "packageName": "rsv-annotations-extension",
+      "version": "0.0.1"
     }
   ],
   "modes": [
@@ -88,6 +92,10 @@
       "packageName": "@ohif/mode-basic-dev-mode",
       "default": false,
       "version": "3.0.0"
+    },
+    {
+      "packageName": "rsv-recist",
+      "version": "0.0.1"
     }
   ],
   "public": [
